Main classes and interfaces created

--- a/src/PokeApi.API/appsettings.json
+++ b/src/PokeApi.API/appsettings.json
@@ -10,6 +10,6 @@
     "BaseUrl": "https://pokeapi.co/api/v2/pokemon"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=StudyApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=PokemonApi;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
